--- a/Assets/Path Finding System/Scripts/UI/UXML's/ui3.uxml
+++ b/Assets/Path Finding System/Scripts/UI/UXML's/ui3.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:VisualElement name="MainElement" style="flex-grow: 1; align-items: auto; justify-content: space-between; flex-direction: row-reverse;">
         <ui:VisualElement name="RightAligner" style="background-color: rgba(0, 0, 0, 0); width: 300px; height: 100%; border-left-color: rgba(0, 0, 0, 0); border-right-color: rgba(0, 0, 0, 0); border-top-color: rgba(0, 0, 0, 0); border-bottom-color: rgba(0, 0, 0, 0); border-left-width: 3px; border-right-width: 3px; border-top-width: 3px; border-bottom-width: 3px;">
-            <ui:VisualElement name="TogglePanel" style="height: 350px; width: 100%; background-color: rgb(72, 60, 60); border-left-width: 3px; border-right-width: 3px; border-top-width: 3px; border-bottom-width: 3px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
+            <ui:VisualElement name="TogglePanel" style="height: 400px; width: 100%; background-color: rgb(72, 60, 60); border-left-width: 3px; border-right-width: 3px; border-top-width: 3px; border-bottom-width: 3px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
                 <ui:VisualElement name="AgentCounter" style="height: 50px; width: 100%; flex-direction: row; align-items: center;">
                     <ui:Label text="Agent Count:" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                     <ui:Label text="0" display-tooltip-when-elided="true" name="AgentCountNumber" style="color: rgb(255, 255, 255);" />
@@ -9,6 +9,8 @@
                 <ui:Label text="Press &apos;A&apos; to add more agents" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Label text="Press &apos;Q&apos; to select single agent" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Label text="Press &apos;W&apos; to select multiple agents" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
+                <ui:Label text="Press &apos;E&apos; to set unwalkable" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
+                <ui:Label text="Press &apos;R&apos; to set walkable" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Toggle label="Debug Mode" name="DebugModeToggle" style="color: rgb(255, 255, 255); width: auto;" />
                 <ui:Toggle label="Debug CostField" name="CostFieldToggle" style="color: rgb(255, 255, 255);" />
                 <ui:Toggle label="Debug FlowField" name="FlowFieldToggle" style="color: rgb(255, 255, 255);" />
