--- a/Assets/Path Finding System/Scripts/UI/UXML's/ui3.uxml
+++ b/Assets/Path Finding System/Scripts/UI/UXML's/ui3.uxml
@@ -9,7 +9,7 @@
                 <ui:Label text="Press &apos;A&apos; to add more agents" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Label text="Press &apos;Q&apos; to select single agent" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Label text="Press &apos;W&apos; to select multiple agents" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
-                <ui:Label text="Press &apos;E&apos; to set unwalkable" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
+                <ui:Label text="Press &apos;S&apos; to Stop/Mobilize selected agents" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Label text="Press &apos;R&apos; to set walkable" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
                 <ui:Toggle label="Debug Mode" name="DebugModeToggle" style="color: rgb(255, 255, 255); width: auto;" />
                 <ui:Toggle label="Debug CostField" name="CostFieldToggle" style="color: rgb(255, 255, 255);" />
